tests/fixtures/invalid/none_notin_none.py
# Cannot use 'not in' with None and None
x: bool = None not in None
